--- a/package.json
+++ b/package.json
@@ -5,14 +5,27 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "node src/main.js"
+    "prestart": "npm run build",
+    "start": "node dist/main.js",
+    "build": "tsc",
+    "build:watch": "tsc --watch",
+    "run:watch": "nodemon dist/main.js --watch dist"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^29.1.2"
+    "@types/source-map-support": "^0.5.6",
+    "jest": "^29.1.2",
+    "nodemon": "^2.0.20",
+    "npm-run-all": "^4.1.5"
   },
   "jest": {
-    "testMatch": ["<rootDir>/**/*.test.js"]
+    "testMatch": [
+      "<rootDir>/**/*.test.js"
+    ]
+  },
+  "dependencies": {
+    "source-map-support": "^0.5.21",
+    "typescript": "^4.8.4"
   }
 }
