--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.1.2",
     "@types/source-map-support": "^0.5.6",
     "jest": "^29.1.2",
     "nodemon": "^2.0.20",
