--- a/package.json
+++ b/package.json
@@ -15,14 +15,10 @@
   "devDependencies": {
     "@types/jest": "^29.1.2",
     "@types/source-map-support": "^0.5.6",
-    "jest": "^29.1.2",
+    "jest": "^29.2.1",
     "nodemon": "^2.0.20",
-    "npm-run-all": "^4.1.5"
-  },
-  "jest": {
-    "testMatch": [
-      "<rootDir>/**/*.test.js"
-    ]
+    "npm-run-all": "^4.1.5",
+    "ts-jest": "^29.0.3"
   },
   "dependencies": {
     "source-map-support": "^0.5.21",
