--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "jest": "^29.2.1",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
-    "ts-jest": "^29.0.3"
+    "ts-jest": "^29.0.3",
+    "unique-names-generator": "^4.7.1"
   },
   "dependencies": {
     "source-map-support": "^0.5.21",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "winston": "^3.8.2"
   }
 }
