--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint . --ext .ts",
     "test": "jest",
     "start": "npm-run-all --parallel build:watch run:watch",
     "build": "tsc",
@@ -15,6 +16,8 @@
   "devDependencies": {
     "@types/jest": "^29.1.2",
     "@types/source-map-support": "^0.5.6",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "jest": "^29.2.1",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
@@ -22,6 +25,7 @@
     "unique-names-generator": "^4.7.1"
   },
   "dependencies": {
+    "eslint": "^8.26.0",
     "source-map-support": "^0.5.21",
     "typescript": "^4.8.4",
     "winston": "^3.8.2"
