--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint . --ext .ts",
+    "lint:fix": "npm run lint -- --fix",
     "test": "jest",
     "start": "npm-run-all --parallel build:watch run:watch",
     "build": "tsc",
