--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest": "^29.2.1",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
     "unique-names-generator": "^4.7.1"
   },
