--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": "build/main.js",
   "scripts": {
     "lint": "eslint . --ext .ts",
     "lint:fix": "npm run lint -- --fix",
@@ -10,29 +11,35 @@
     "start": "npm-run-all --parallel build:watch run:watch",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "run:watch": "nodemon dist/main.js --watch dist",
-    "run:batch": "node dist/batchGames.js"
+    "run:watch": "nodemon build/main.js --watch build",
+    "run:batch": "node dist/batchGames.js",
+    "build:exe": "pkg ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.1.2",
     "@types/source-map-support": "^0.5.6",
+    "@types/yargs": "^17.0.13",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
+    "eslint": "^8.26.0",
     "jest": "^29.2.1",
+    "nexe": "^4.0.0-rc.1",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
+    "pkg": "^5.8.0",
     "prettier": "^2.7.1",
-    "ts-jest": "^29.0.3",
-    "unique-names-generator": "^4.7.1"
-  },
-  "dependencies": {
-    "@types/yargs": "^17.0.13",
-    "eslint": "^8.26.0",
     "source-map-support": "^0.5.21",
+    "ts-jest": "^29.0.3",
+    "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
+    "unique-names-generator": "^4.7.1",
     "winston": "^3.8.2",
     "yargs": "^17.6.0"
+  },
+  "pkg": {
+    "scripts": "build/**/*.js",
+    "outputPath": "dist"
   }
 }
