--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "3card",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "",
   "main": "index.js",
   "bin": "build/main.js",
   "scripts": {
     "lint": "eslint . --ext .ts",
     "lint:fix": "npm run lint -- --fix",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "jest",
     "start": "npm-run-all --parallel build:watch run:watch",
     "build": "tsc",
@@ -25,10 +26,9 @@
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.26.0",
     "jest": "^29.2.1",
-    "nexe": "^4.0.0-rc.1",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.1.0",
     "npm-run-all": "^4.1.5",
-    "pkg": "^5.8.0",
+    "pkg": "^5.8.1",
     "prettier": "^2.7.1",
     "source-map-support": "^0.5.21",
     "ts-jest": "^29.0.3",
